--- a/res/layout/fragment_listening_my.xml
+++ b/res/layout/fragment_listening_my.xml
@@ -9,17 +9,17 @@
     tools:context="com.example.secrettalk5.Listening_MyFragment$PlaceholderFragment" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/Login_TitleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/Login_LoginButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
-        android:layout_below="@+id/textView1"
+        android:layout_alignLeft="@+id/Login_TitleTextView"
+        android:layout_below="@+id/Login_TitleTextView"
         android:text="Button" />
 
 </RelativeLayout>
