--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -30,7 +30,7 @@
             android:text="TextView" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/Register_NicknameTextView"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1"
