--- a/res/layout/fragment_main2.xml
+++ b/res/layout/fragment_main2.xml
@@ -42,7 +42,7 @@
                 android:text="@string/Listening" />
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/Register_NicknameTextView"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
