--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -12,7 +12,7 @@
         android:layout_weight="1" >
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/content_talking"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1"
@@ -21,7 +21,7 @@
             android:text="TextView" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/Time"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1"
