--- a/res/layout/fragment_main2.xml
+++ b/res/layout/fragment_main2.xml
@@ -24,7 +24,7 @@
             android:layout_weight="1" >
 
             <TextView
-                android:id="@+id/textView1"
+                android:id="@+id/content_talking"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
@@ -33,7 +33,7 @@
                 android:text="@string/Talking" />
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/Time"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
