--- a/res/layout/activity_talking_my_fragment.xml
+++ b/res/layout/activity_talking_my_fragment.xml
@@ -3,6 +3,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/Banana_White"
     tools:context="com.example.secrettalk5.Setting_MyFragment"
     tools:ignore="MergeRootFrame" />
 
