--- a/res/layout/fragment_main2.xml
+++ b/res/layout/fragment_main2.xml
@@ -20,7 +20,7 @@
 
         <LinearLayout
             android:layout_width="fill_parent"
-            android:layout_height="55dp"
+            android:layout_height="50dp"
             android:layout_weight="1" >
 
             <TextView
@@ -28,42 +28,47 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
-                android:background="@color/Brown_Banana"
+                android:background="@color/textview_background"
                 android:gravity="center"
-                android:text="@string/Talking" />
+                android:paddingTop="6dp"
+                android:textColor="@color/textview_viewpager_color" />
 
             <TextView
                 android:id="@+id/Time"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
-                android:background="@color/Blue"
+                android:background="@color/textview_background"
                 android:gravity="center"
-                android:text="@string/Listening" />
+                android:paddingTop="6dp"
+                android:textColor="@color/textview_viewpager_color" />
 
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
-                android:background="@color/Green"
+                android:background="@color/textview_background"
                 android:gravity="center"
-                android:text="@string/Setting" />
+                android:paddingTop="6dp"
+                android:textColor="@color/textview_viewpager_color" />
         </LinearLayout>
 
         <RelativeLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:background="@color/Banana_White"
             android:orientation="vertical" >
 	        
 	        <ImageView
 	            android:id="@+id/cursor"
-	        	android:layout_width="fill_parent"
-	        	android:layout_height="wrap_content"
-	       		android:scaleType="matrix"
-	       		android:layout_alignParentLeft="true"
-        		android:layout_alignParentRight="true"
-	        	android:src="@drawable/slide" />
+	            android:layout_width="fill_parent"
+	            android:layout_height="wrap_content"
+	            android:layout_alignParentLeft="true"
+	            android:layout_alignParentRight="true"
+	            android:background="@color/Banana_White"
+	            android:scaleType="matrix"
+	            android:src="@drawable/slide" />
         
         </RelativeLayout>
 
