--- a/res/layout/activity_register.xml
+++ b/res/layout/activity_register.xml
@@ -1,5 +1,5 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -130,6 +130,25 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="date" />
+
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/Register_SignRow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"  >
+
+            <TextView
+                android:id="@+id/Register_SignTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/Register_SignText" />
+
+            <Spinner
+                android:id="@+id/spinner1"
+                android:layout_width="wrap_content"
+                android:layout_height="20dp" />
 
         </TableRow>
 
