--- a/res/values/theme.xml
+++ b/res/values/theme.xml
@@ -7,7 +7,8 @@
     <style name="MyActionBar"
            parent="@android:style/Widget.Holo.Light.ActionBar.Solid.Inverse">
         <item name="android:background">@color/Banana</item>
-        <item name="android:titleTextStyle">@style/MyActionBarTitleText</item> 
+        <item name="android:titleTextStyle">@style/MyActionBarTitleText</item>
+        <item name="android:icon">@drawable/ic_launcher_shadow</item> 
     </style>
         
     <style name="MyActionBarTitleText" parent="@style/TextAppearance.AppCompat.Widget.ActionBar.Title">  
