--- a/res/layout/fragment_talking_my.xml
+++ b/res/layout/fragment_talking_my.xml
@@ -3,7 +3,11 @@
     android:id="@+id/a"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@color/Banana_White"
+    android:background="@color/Banana_Gray"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.secrettalk5.Listening_MyFragment$PlaceholderFragment" >
 
     <ListView
