--- a/res/layout/fragment_listening_my.xml
+++ b/res/layout/fragment_listening_my.xml
@@ -4,10 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/Banana_Gray"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:padding="2dp"
     tools:context="com.example.secrettalk5.Listening_MyFragment$PlaceholderFragment" >
 
     <ListView
@@ -15,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/Banana_Gray" >
+
     </ListView>
 
 </FrameLayout>
