--- a/res/layout/fragment_setting_my.xml
+++ b/res/layout/fragment_setting_my.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/Banana_White"
-    android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">
+    android:orientation="vertical" >
 
     <TextView
         android:id="@+id/textView2"
@@ -129,26 +130,53 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="45dp"
                 android:layout_marginBottom="10dp"
                 android:background="@color/Banana_Setting_Gray_light" >
 
-				<TextView
-				    android:id="@+id/textView4"
-				    android:layout_width="50dp"
-				    android:layout_height="match_parent"
-				    android:layout_marginLeft="10dp"
-				    android:gravity="center_vertical"
-				    android:text="@string/Setting_sign"
-				    android:textColor="@color/Black"
-				    android:textSize="18sp" />
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="50dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp"
+                    android:gravity="center_vertical"
+                    android:text="@string/Setting_sign"
+                    android:textColor="@color/Black"
+                    android:textSize="18sp" />
 
-				<Spinner
-				    android:id="@+id/spinner1"
-				    android:layout_width="wrap_content"
-				    android:layout_height="wrap_content"
-				    android:layout_weight="1" />
-                
+                <Spinner
+                    android:id="@+id/spinner1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.08"
+                    android:padding="2dp"
+                    android:prompt="@string/prompt" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/LinearLayout1"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_marginBottom="10dp"
+                android:background="@color/Banana_Setting_Gray_light" >
+
+                <TextView
+                    android:id="@+id/textView5"
+                    android:layout_width="50dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp"
+                    android:gravity="center_vertical"
+                    android:text="@string/Setting_mood"
+                    android:textColor="@color/Black"
+                    android:textSize="18sp" />
+
+                <Spinner
+                    android:id="@+id/spinner2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.08"
+                    android:padding="2dp"
+                    android:prompt="@string/prompt" />
             </LinearLayout>
 
             <LinearLayout
@@ -161,9 +189,7 @@
                     android:layout_height="fill_parent"
                     android:background="@drawable/logo_secrettalk_banner"
                     android:visibility="invisible" />
-
             </LinearLayout>
-
         </LinearLayout>
     </ScrollView>
 
