--- a/res/layout/fragment_talking_my.xml
+++ b/res/layout/fragment_talking_my.xml
@@ -4,18 +4,30 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@color/Banana_Gray"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:padding="2dp"
     tools:context="com.example.secrettalk5.Listening_MyFragment$PlaceholderFragment" >
 
-    <ListView
-        android:id="@+id/Talking_ListView1"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/Banana_Gray" >
+        android:orientation="vertical" >
 
-    </ListView>
+        <ListView
+            android:id="@+id/Talking_ListView1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/Banana_Gray" >
+
+        </ListView>
+
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="@color/button_bakcground"
+            android:text="@string/Talking_talk_button" />
+
+    </LinearLayout>
 
 </FrameLayout>
