--- a/res/layout/fragment_setting_my.xml
+++ b/res/layout/fragment_setting_my.xml
@@ -40,7 +40,7 @@
                 android:background="@color/Banana_Setting_Gray_light" >
 
                 <TextView
-                    android:id="@+id/textView1"
+                    android:id="@+id/name"
                     android:layout_width="50dp"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="10dp"
@@ -184,7 +184,7 @@
                 android:layout_height="100dp" >
 
                 <ImageView
-                    android:id="@+id/imageView1"
+                    android:id="@+id/icon_imageview"
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
                     android:background="@drawable/logo_secrettalk_banner"
