--- a/res/layout/fragment_talking_my.xml
+++ b/res/layout/fragment_talking_my.xml
@@ -22,7 +22,7 @@
         </ListView>
 
         <Button
-            android:id="@+id/button1"
+            android:id="@+id/button_talking"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@color/button_bakcground"
