--- a/res/layout/article_send.xml
+++ b/res/layout/article_send.xml
@@ -24,6 +24,7 @@
                 android:id="@+id/name"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:gravity="right"
                 android:text="TextView"
                 android:textColor="@color/Black"
                 android:textStyle="bold" />
@@ -32,13 +33,16 @@
                 android:id="@+id/time"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="right"
                 android:text="TextView"
-                android:textColor="@color/Banana_Gray_dark" />
+                android:textColor="@color/Banana_Gray_dark"
+                android:textSize="10sp" />
 
             <TextView
                 android:id="@+id/content1"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content" />
+
         </LinearLayout>
 
         <ImageView
