--- a/res/layout/fragment_article_dynamiclayout.xml
+++ b/res/layout/fragment_article_dynamiclayout.xml
@@ -30,7 +30,8 @@
     <ScrollView
         android:id="@+id/scrollView1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:layout_weight="9" >
 
         <LinearLayout
             android:id="@+id/insideScrollView"
@@ -40,5 +41,32 @@
 
         </LinearLayout>
     </ScrollView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom" >
+
+        <EditText
+            android:id="@+id/editText1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:inputType="textMultiLine" >
+
+            <requestFocus />
+        </EditText>
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.1"
+            android:text="@string/reply"
+             android:background="@color/button_bakcground"
+             />
+
+    </LinearLayout>
 
 </LinearLayout>
