--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -10,25 +10,20 @@
         app:showAsAction="never"/>
 	 -->
     <item
-        android:id="@+id/action_refresh"
+        android:id="@+id/action_home"
         android:orderInCategory="1"
         android:showAsAction="ifRoom|withText"
+        android:layout_gravity="center"
         android:title="@string/Home"/>
-<!--     android:icon="@drawable/ic_launcher" -->
-<!--     <item -->
-<!--         android:id="@+id/action_edit" -->
-<!--         android:orderInCategory="2" -->
-<!--         android:showAsAction="ifRoom|withText" -->
-<!--         android:title="@string/action_edit"/> -->
-    <!-- <item
-        android:id="@+id/action_info"
-        android:orderInCategory="4"
-        android:showAsAction="ifRoom|withText"
-        android:title="@string/action_info"/>
-    <item
-        android:id="@+id/action_search"
-        android:orderInCategory="3"
-        android:showAsAction="ifRoom|withText"
-        android:title="@string/action_search"/> -->
     
+    <item  
+        android:id="@+id/action_refresh"
+        android:orderInCategory="2"
+        android:showAsAction="ifRoom|withText"
+		android:icon="@drawable/refresh_icon"
+		android:layout_gravity="center"
+        android:title="@string/Refresh" />
+    
+    
+
 </menu>
