Add Post Article Finish

--- a/res/layout/fragment_article_dynamiclayout.xml
+++ b/res/layout/fragment_article_dynamiclayout.xml
@@ -12,7 +12,7 @@
         android:orientation="vertical" >
 
         <Button
-            android:id="@+id/button1"
+            android:id="@+id/PostArticle_PostButton"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -48,7 +48,7 @@
         android:layout_gravity="bottom" >
 
         <EditText
-            android:id="@+id/editText1"
+            android:id="@+id/PostArticle_ContentEditText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
