--- a/res/layout/fragment_postacticle_my.xml
+++ b/res/layout/fragment_postacticle_my.xml
@@ -19,7 +19,7 @@
             android:src="@drawable/test_for_conversation" />
 
         <EditText
-            android:id="@+id/editText1"
+            android:id="@+id/PostArticle_ContentEditText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:ems="10"
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content" >
 
         <Button
-            android:id="@+id/button1"
+            android:id="@+id/PostArticle_PostButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
