--- a/res/layout/fragment_setting_my.xml
+++ b/res/layout/fragment_setting_my.xml
@@ -194,7 +194,7 @@
     </ScrollView>
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/PostArticle_PostButton"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_weight="0.04"
