--- a/res/layout/activity_login_new.xml
+++ b/res/layout/activity_login_new.xml
@@ -15,7 +15,7 @@
         android:orientation="vertical" >
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/about_version_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/login_title"
@@ -24,7 +24,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/signout_userID_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/login_introduce"
@@ -47,7 +47,7 @@
             android:layout_weight="1.8" >
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/about_version"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingRight="10dp"
@@ -77,7 +77,7 @@
             android:layout_weight="1.8" >
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/about_program_instructor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingRight="10dp"
@@ -108,7 +108,7 @@
             android:orientation="vertical" >
 
             <Button
-                android:id="@+id/Login_LoginButton"
+                android:id="@+id/signout_signoutButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/textview_background"
@@ -154,7 +154,7 @@
             android:orientation="vertical" >
 
             <TextView
-                android:id="@+id/textView5"
+                android:id="@+id/about_program_develpoer_textViwer3"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:layout_weight="1" />
@@ -165,13 +165,13 @@
                 android:layout_weight="1" >
 
                 <TextView
-                    android:id="@+id/textView6"
+                    android:id="@+id/about_program_instructor_textView"
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
                     android:layout_weight="1" />
 
                 <ImageView
-                    android:id="@+id/imageView1"
+                    android:id="@+id/signout_imageView"
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
                     android:layout_weight="1"
