--- a/res/layout/fragment_main2.xml
+++ b/res/layout/fragment_main2.xml
@@ -46,7 +46,7 @@
                 android:textColor="@color/textview_viewpager_color" />
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/about_version"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
