--- a/res/layout/article_reveive2.xml
+++ b/res/layout/article_reveive2.xml
@@ -13,13 +13,24 @@
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:layout_marginTop="5dp"
-        android:gravity="right" >
+        android:gravity="left" >
+
+        <ImageView
+            android:id="@+id/icon_imageview"
+            android:layout_width="50dp"
+            android:layout_height="50dp" />
+
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="10dp"
+            android:layout_height="50dp"
+            android:src="@drawable/bubble_triangle2" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:background="@drawable/linearlayout_send"
+            android:background="@drawable/linearlayout_bubble_receive"
             android:orientation="vertical"
             android:paddingBottom="10dp"
             android:paddingLeft="10dp"
@@ -31,23 +42,23 @@
                 android:layout_height="wrap_content" >
 
                 <TextView
-                    android:id="@+id/time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="right"
-                    android:paddingRight="5dp"
-                    android:text="TextView"
-                    android:textColor="@color/Banana_Gray_dark"
-                    android:textSize="10sp" />
-
-                <TextView
                     android:id="@+id/name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="right"
+                    android:gravity="left"
                     android:text="TextView"
                     android:textColor="@color/Black"
                     android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="left"
+                    android:paddingLeft="5dp"
+                    android:text="TextView"
+                    android:textColor="@color/Banana_Gray_dark"
+                    android:textSize="10sp" />
 
             </LinearLayout>
 
@@ -55,22 +66,9 @@
                 android:id="@+id/content1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right" />
+                android:layout_gravity="left" />
 
         </LinearLayout>
-
-        <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="10dp"
-            android:layout_height="50dp"
-            android:layout_gravity="top"
-            android:src="@drawable/bubble_triangle" />
-
-        <ImageView
-            android:id="@+id/icon_imageview"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_gravity="right" />
 
     </LinearLayout>
 
