--- a/res/layout/fragment_register_new.xml
+++ b/res/layout/fragment_register_new.xml
@@ -68,7 +68,6 @@
                 android:padding="3dp"
                 android:textColorHint="@color/Banana_Gray_dark" >
 
-                <requestFocus />
             </EditText>
         </LinearLayout>
 
@@ -121,8 +120,10 @@
                 android:background="@drawable/bg_edittext"
                 android:ems="10"
                 android:hint="請輸入暱稱..."
+                android:inputType="textPersonName"
                 android:padding="3dp"
                 android:textColorHint="@color/Banana_Gray_dark" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -147,8 +148,10 @@
                 android:background="@drawable/bg_edittext"
                 android:ems="10"
                 android:hint="請輸入您的真實姓名..."
+                android:inputType="textPersonName"
                 android:padding="3dp"
                 android:textColorHint="@color/Banana_Gray_dark" />
+
         </LinearLayout>
 
         <LinearLayout
