--- a/res/layout/fragment_article_dynamiclayout.xml
+++ b/res/layout/fragment_article_dynamiclayout.xml
@@ -9,7 +9,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:visibility="gone" >
 
         <Button
             android:id="@+id/PostArticle_PostButton1"
